[package]

name = "pg_vault"
version = "0.0.1"
authors = ["David Justice <david@devigned.com>"]

[dependencies]
rustc-serialize = "*"

[dependencies.vault]
git = "https://github.com/devigned/rust-key-vault.git"

[dependencies.postgres_extension]
path = "../postgres-extension.rs"
# git = "https://github.com/devigned/postgres-extension.rs.git"

[lib]
name = "pg_vault"
crate-type = ["dylib"]
