[package]

name = "pg_vault"
version = "0.0.1"
authors = ["David Justice <david@devigned.com>"]

[dependencies]
rustc-serialize = "*"
lazy_static = "0.1.*"

[dependencies.vault]
git = "https://github.com/devigned/rust-key-vault.git"

[dependencies.postgres_extension]
git = "https://github.com/devigned/postgres-extension.rs.git"
# path = "../postgres-extension.rs"

[lib]
name = "pg_vault"
crate-type = ["dylib"]
